--- a/sr_GC_venture_funding_with_deep_learning.ipynb
+++ b/sr_GC_venture_funding_with_deep_learning.ipynb
@@ -1900,17 +1900,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 269
         },
-        "outputId": "d716c8a6-2f88-47a3-eb64-7917ffff0ca3"
+        "outputId": "297c1a55-edf3-4798-90f7-a35fbb12d790"
       },
       "source": [
         "# Define features set X by selecting all columns but IS_SUCCESSFUL\n",
-        "X = encoded_df.drop(columns=\"IS_SUCCESSFUL\")\n",
+        "X = encoded_df.drop(columns=[\"IS_SUCCESSFUL\"])\n",
         "\n",
         "# Review the features DataFrame\n",
         "# YOUR CODE HERE\n",
         "display(X.head())"
       ],
-      "execution_count": 37,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2505,7 +2505,7 @@
         "X_train_scaled = X_scaler.transform(X_train)\n",
         "X_test_scaled = X_scaler.transform(X_test)\n"
       ],
-      "execution_count": 39,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -2533,17 +2533,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K1Vgwz04URsH"
+        "id": "K1Vgwz04URsH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7a639a7-7f46-4787-ad54-00ef666621fd"
       },
       "source": [
         "# Define the the number of inputs (features) to the model\n",
-        "number_input_features = # YOUR CODE HERE\n",
+        "number_input_features = len(X_train.iloc[0])\n",
         "\n",
         "# Review the number of features\n",
         "number_input_features\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "116"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2552,40 +2567,70 @@
       },
       "source": [
         "# Define the number of neurons in the output layer\n",
-        "number_output_neurons = # YOUR CODE HERE"
+        "number_output_neurons = 1"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i0Q3iY3wURsH"
+        "id": "i0Q3iY3wURsH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b27b08ab-587f-4991-fe2e-e04d9ba7d533"
       },
       "source": [
         "# Define the number of hidden nodes for the first hidden layer\n",
-        "hidden_nodes_layer1 =  # YOUR CODE HERE\n",
+        "hidden_nodes_layer1 =  (number_input_features + number_output_neurons) // 2\n",
         "\n",
         "# Review the number hidden nodes in the first layer\n",
         "hidden_nodes_layer1\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "58"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ux_lAsrvURsH"
+        "id": "Ux_lAsrvURsH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b14bac54-7213-41f1-82b7-ecfe9f8c34d2"
       },
       "source": [
         "# Define the number of hidden nodes for the second hidden layer\n",
-        "hidden_nodes_layer2 =  # YOUR CODE HERE\n",
+        "hidden_nodes_layer2 =  (hidden_nodes_layer1 + number_output_neurons) // 2\n",
         "\n",
         "# Review the number hidden nodes in the second layer\n",
         "hidden_nodes_layer2\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "29"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2594,9 +2639,9 @@
       },
       "source": [
         "# Create the Sequential model instance\n",
-        "nn = # YOUR CODE HERE\n"
+        "nn = Sequential()\n"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -2606,9 +2651,10 @@
       },
       "source": [
         "# Add the first hidden layer\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "nn.add(Dense(input_dim=number_input_features, units=hidden_nodes_layer1, activation=\"relu\"))\n"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -2618,9 +2664,10 @@
       },
       "source": [
         "# Add the second hidden layer\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "nn.add(Dense(units=hidden_nodes_layer2, activation=\"relu\"))"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -2630,22 +2677,49 @@
       },
       "source": [
         "# Add the output layer to the model specifying the number of output neurons and activation function\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "nn.add(Dense(units=1, activation=\"sigmoid\"))"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1L2ZVcXgURsI"
+        "id": "1L2ZVcXgURsI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d0e7a919-3c57-4f51-9363-644fda094a87"
       },
       "source": [
         "# Display the Sequential model summary\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "nn.summary()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense (Dense)                (None, 58)                6786      \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 29)                1711      \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 1)                 30        \n",
+            "=================================================================\n",
+            "Total params: 8,527\n",
+            "Trainable params: 8,527\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2663,22 +2737,135 @@
       },
       "source": [
         "# Compile the Sequential model\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5_z-FPHJURsI"
+        "id": "5_z-FPHJURsI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6be51299-5558-410e-aea8-09ba9bc5e933"
       },
       "source": [
         "# Fit the model using 50 epochs and the training data\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "fit_model_50 = nn.fit(X_train_scaled, y_train, epochs=50)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/50\n",
+            "804/804 [==============================] - 3s 2ms/step - loss: 0.5747 - accuracy: 0.7189\n",
+            "Epoch 2/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5534 - accuracy: 0.7282\n",
+            "Epoch 3/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5493 - accuracy: 0.7297\n",
+            "Epoch 4/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5476 - accuracy: 0.7310\n",
+            "Epoch 5/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5468 - accuracy: 0.7322\n",
+            "Epoch 6/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5460 - accuracy: 0.7319\n",
+            "Epoch 7/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5447 - accuracy: 0.7341\n",
+            "Epoch 8/50\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5437 - accuracy: 0.7350\n",
+            "Epoch 9/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5435 - accuracy: 0.7338\n",
+            "Epoch 10/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5422 - accuracy: 0.7351\n",
+            "Epoch 11/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5424 - accuracy: 0.7355\n",
+            "Epoch 12/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5414 - accuracy: 0.7356\n",
+            "Epoch 13/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5410 - accuracy: 0.7360\n",
+            "Epoch 14/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5407 - accuracy: 0.7355\n",
+            "Epoch 15/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5403 - accuracy: 0.7346\n",
+            "Epoch 16/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5398 - accuracy: 0.7366\n",
+            "Epoch 17/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5392 - accuracy: 0.7370\n",
+            "Epoch 18/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5394 - accuracy: 0.7378\n",
+            "Epoch 19/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5384 - accuracy: 0.7374\n",
+            "Epoch 20/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5381 - accuracy: 0.7374\n",
+            "Epoch 21/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5378 - accuracy: 0.7366\n",
+            "Epoch 22/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5375 - accuracy: 0.7385\n",
+            "Epoch 23/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5374 - accuracy: 0.7387\n",
+            "Epoch 24/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5376 - accuracy: 0.7370\n",
+            "Epoch 25/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5365 - accuracy: 0.7384\n",
+            "Epoch 26/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5369 - accuracy: 0.7364\n",
+            "Epoch 27/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5362 - accuracy: 0.7380\n",
+            "Epoch 28/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5362 - accuracy: 0.7389\n",
+            "Epoch 29/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5358 - accuracy: 0.7392\n",
+            "Epoch 30/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5359 - accuracy: 0.7392\n",
+            "Epoch 31/50\n",
+            "804/804 [==============================] - 1s 2ms/step - loss: 0.5349 - accuracy: 0.7384\n",
+            "Epoch 32/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5353 - accuracy: 0.7385\n",
+            "Epoch 33/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5351 - accuracy: 0.7392\n",
+            "Epoch 34/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5348 - accuracy: 0.7393\n",
+            "Epoch 35/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5347 - accuracy: 0.7398\n",
+            "Epoch 36/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5344 - accuracy: 0.7394\n",
+            "Epoch 37/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5345 - accuracy: 0.7396\n",
+            "Epoch 38/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5338 - accuracy: 0.7402\n",
+            "Epoch 39/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5339 - accuracy: 0.7395\n",
+            "Epoch 40/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5339 - accuracy: 0.7393\n",
+            "Epoch 41/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5339 - accuracy: 0.7395\n",
+            "Epoch 42/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5333 - accuracy: 0.7413\n",
+            "Epoch 43/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5331 - accuracy: 0.7408\n",
+            "Epoch 44/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5329 - accuracy: 0.7411\n",
+            "Epoch 45/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5331 - accuracy: 0.7400\n",
+            "Epoch 46/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5330 - accuracy: 0.7399\n",
+            "Epoch 47/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5324 - accuracy: 0.7402\n",
+            "Epoch 48/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5327 - accuracy: 0.7407\n",
+            "Epoch 49/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5320 - accuracy: 0.7404\n",
+            "Epoch 50/50\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5321 - accuracy: 0.7409\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2692,17 +2879,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rWaHGdGrURsI"
+        "id": "rWaHGdGrURsI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e49e12dd-325c-466d-90d3-4ee6ebc8b4ca"
       },
       "source": [
         "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-        "model_loss, model_accuracy = # YOUR CODE HERE\n",
+        "model_loss, model_accuracy = nn.evaluate(X_test_scaled, y_test, verbose=2)\n",
         "\n",
         "# Display the model loss and accuracy results\n",
         "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "268/268 - 0s - loss: 0.5538 - accuracy: 0.7308\n",
+            "Loss: 0.553842306137085, Accuracy: 0.7308454513549805\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2720,12 +2920,14 @@
       },
       "source": [
         "# Set the model's file path\n",
-        "file_path = # YOUR CODE HERE\n",
+        "from pathlib import Path\n",
+        "file_path = Path(\"/AlphabetSoup.h5\")\n",
         "\n",
         "# Export your model to a HDF5 file\n",
-        "# YOUR CODE HERE\n"
+        "# YOUR CODE HERE\n",
+        "nn.save(file_path)"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
